--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0"
 toml = "0.8"
 toml_edit = "0.22"
 dirs = "5.0"
+
+[package.metadata.cargo-udeps.ignore]
+dependencies = ["chrono", "regex", "serde_json"]
