feat: implement remaining workflows
Add logging initialization, full git branch finalize/release-pr flows, and version bump/show/changelog support with changelog updates and git tagging.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ serde_json = "1.0"
 toml = "0.8"
 toml_edit = "0.22"
 dirs = "5.0"
+semver = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 
 [package.metadata.cargo-udeps.ignore]
 dependencies = ["chrono", "regex", "serde_json"]
